// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 01: cirno 1`] = `
{
  "code": 0,
  "files": [],
  "signal": null,
  "stderr": "",
  "stdout": "cirno/0.0.1

Usage:
  $ cirno <command> [options]

Commands:
  init                   Initialize a new project
  list                   List all instances
  import [src] [name]    Import an instance
  export [id] [dest]     Export an instance
  clone [id] [name]      Clone an instance
  backup [id] [name]     Backup an instance
  restore [head] [base]  Restore an instance
  remove [id]            Remove an instance

For more info, run any command with the \`--help\` flag:
  $ cirno init --help
  $ cirno list --help
  $ cirno import --help
  $ cirno export --help
  $ cirno clone --help
  $ cirno backup --help
  $ cirno restore --help
  $ cirno remove --help

Options:
  -h, --help     Display this message 
  -v, --version  Display version number 
",
}
`;

exports[`step 02: cirno init 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Cirno project initialized.
",
}
`;

exports[`step 03: cirno init 1`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Project already exists. Use \`cirno init -f\` to overwrite.
",
}
`;

exports[`step 04: cirno import ../../tests/fixtures/foo 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: 4f0b0c25-9b8b-5e9b-a785-86882cd9a230
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/4f0b0c25-9b8b-5e9b-a785-86882cd9a230/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance 4f0b0c25-9b8b-5e9b-a785-86882cd9a230.
",
}
`;

exports[`step 05: cirno export 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 ../export/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: 4f0b0c25-9b8b-5e9b-a785-86882cd9a230
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/4f0b0c25-9b8b-5e9b-a785-86882cd9a230/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully exported instance 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 to <export>/foo.zip.
",
}
`;

exports[`step 06: cirno remove 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Instance 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 is successfully removed.
",
}
`;

exports[`step 07: cirno remove 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 1`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Instance 4f0b0c25-9b8b-5e9b-a785-86882cd9a230 not found.
",
}
`;

exports[`step 08: cirno import ../export/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: dd1857df-387b-5d76-81bf-acbcca6e4d68
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/dd1857df-387b-5d76-81bf-acbcca6e4d68/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance dd1857df-387b-5d76-81bf-acbcca6e4d68.
",
}
`;
